Added Weeks 15 to 18

--- a/30weeks.html
+++ b/30weeks.html
@@ -51,7 +51,7 @@
                 <p>Front-End JavaScript Library, React.</p>
             </div>
             <div class="week-box">
-                <p>Weeks 15 - 18:</p>
+                <p><a href="weeks15to18.html">Weeks 15 - 18:</a><p>
                 <p>Multi-platform Mobile App Development, React Native.</p>
             </div>
             <div class="week-box">
