--- a/30weeks.html
+++ b/30weeks.html
@@ -55,7 +55,7 @@
                 <p>Multi-platform Mobile App Development, React Native.</p>
             </div>
             <div class="week-box">
-                <p>Weeks 19 - 22:</p>
+                <p><a href="weeks19to22.html">Weeks 19 - 22:</a><p>
                 <p>Server-side Development, Node.js, Express.js, and MongoDB.</p>
             </div>
             <div class="week-box">
