Changed to 2021 and Coding Bootcamp

--- a/codingbootcamp.html
+++ b/codingbootcamp.html
@@ -20,7 +20,7 @@
     <div class="topnav">
 		<a class="active" href="index.html">Home</a>
 		<div class="link-container">
-			<a href="30weeks.html">30 Weeks of Coding</a>
+			<a href="codingbootcamp.html">Coding Bootcamp</a>
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
             <a href="tech.html">Tech</a>
@@ -32,8 +32,8 @@
     <div class="page-container">
         <div class="col-12 col-sm-12">
             <div class="contactme">
-                <h2>30 Weeks of Coding</h2> 
-                <h4>I am embarking on a 30-week long coding journey with NuCamp, an engineering bootcamp.</h4>
+                <h2>Coding Bootcamp</h2> 
+                <h4>I am embarking on a 22-week long coding journey with NuCamp, an engineering bootcamp.</h4>
                 <h4>I am documenting my progress, highlighting the knowledge and skills I have acquired, and showcasing the projects I have created.</h4>
             </div>
         </div>
@@ -58,21 +58,13 @@
                 <p><a href="weeks19to22.html">Weeks 19 - 22:</a><p>
                 <p>Server-side Development, Node.js, Express.js, and MongoDB.</p>
             </div>
-            <div class="week-box">
-                <p>Weeks 23 - 26:</p>
-                <p>Personal Development I.</p>
-            </div>
-            <div class="week-box">
-                <p>Weeks 27 - 30:</p>
-                <p>Personal Development II</p>
-            </div>
         </div>
     </div>
 
 <footer>
     <div class="footer">
         <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-        <br>Joanna Chang | 2020 
+        <br>Joanna Chang | 2021 
     </div>
 </footer>
 </body>
