--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="topnav">
 		<a class="active" href="index.html">Home</a>
 		<div class="link-container">
-			<a href="30weeks.html">30 Weeks of Coding</a>
+			<a href="codingbootcamp.html">Coding Bootcamp</a>
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
             <a href="tech.html">Tech</a>
@@ -70,7 +70,7 @@
     <footer>
         <div class="footer">
             <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-            <br>Joanna Chang | 2020 
+            <br>Joanna Chang | 2021 
         </div>
     </footer>
 </body>
