--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="topnav">
 			<a class="active" href="index.html">Home</a>
 			<div class="link-container">
-				<a href="30weeks.html">30 Weeks of Coding</a>
+				<a href="codingbootcamp.html">Coding Bootcamp</a>
 				<a href="projects.html">Projects</a>
 				<a href="about.html">About</a>
 				<a href="tech.html">Tech</a>
@@ -33,7 +33,7 @@
 		<div class="introduction">
 			<h2>Hi, I'm Joanna.</h2>
 		
-			<h3>I'm creating this website from scratch using HTML, CSS, Bootstrap, and JavaScript to help me learn to code.  I've embarked on my <a href="30weeks.html" class="weeks">30 Weeks of Coding</a> journey 22 weeks ago.</h3>
+			<h3>I'm creating this website from scratch using HTML, CSS, Bootstrap, and JavaScript to help me learn to code.  I've embarked on my <a href="codingbootcamp.html" class="weeks">Coding Bootcamp</a> journey 22 weeks ago.</h3>
 
 		<form>
 			<button formaction="about.html" class="learnmore">Learn More About Me</button>
@@ -46,7 +46,7 @@
 
 			<div class="footer">
 				<a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-				<br>Joanna Chang | 2020 
+				<br>Joanna Chang | 2021
 			</div>
 	</footer>
 
