--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <div class="container aboutme">
         <p><img src = "illustrationphoto.jpg" alt= "Joanna Chang" id="illustrationphoto" width="200"/></p> 
         <p><strong>My name is Joanna and I'm an analytics professional aspiring to become a full-stack developer.</strong></p>
-        <p>I love finding the whys and pearls behind data.  But I also have passions for organization, creation, and problem solving.</p>
+        <p>I love finding the pearls and whys behind data.  But I also have passions for organization, creation, and problem solving.</p>
         <p>I received training from NuCamp engineering bootcamp, and my tech stack includes HTML, CSS, Bootstrap, and JavaScript - but I am still learning and branching into new languages and frameworks.</p>  
         <p>I'm seeking a web developer role where I could gain new experiences while leveraging the skills I have acquired.  If your team has an opportunity and believes there is a match, please don't hesitate to <a href="contact.html" class="weeks">contact me.</a></p> 
         <p>I enjoy dancing, cooking, and traveling.  Recent favorites include Israel, Kenya, Tanzania, and Myanmar.</p>
