--- a/codingbootcamp.html
+++ b/codingbootcamp.html
@@ -33,8 +33,8 @@
         <div class="col-12 col-sm-12">
             <div class="contactme">
                 <h2>Coding Bootcamp</h2> 
-                <h4>I am embarking on a 22-week long coding journey with NuCamp, an engineering bootcamp.</h4>
-                <h4>I am documenting my progress, highlighting the knowledge and skills I have acquired, and showcasing the projects I have created.</h4>
+                <h4>I embarked on a 22-week long coding journey with NuCamp, an engineering bootcamp.</h4>
+                <h4>I documented my progress, highlighting the knowledge and skills I have acquired, and showcasing the projects I have created.</h4>
             </div>
         </div>
         <div class="container-weeks">
@@ -64,7 +64,7 @@
 <footer>
     <div class="footer">
         <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-        <br>Joanna Chang | 2021 
+        <br>&copy; 2021 Copyright: Joanna Chang 
     </div>
 </footer>
 </body>
