--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <footer>
         <div class="footer">
             <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-            <br>Joanna Chang | 2021 
+            <br>&copy; 2021 Copyright: Joanna Chang 
         </div>
     </footer>
 </body>
