--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="introduction">
 			<h2>Hi, I'm Joanna.</h2>
 		
-			<h3>I'm creating this website from scratch using HTML, CSS, Bootstrap, and JavaScript to help me learn to code.  I've embarked on my <a href="codingbootcamp.html" class="weeks">Coding Bootcamp</a> journey 22 weeks ago.</h3>
+			<h3>I'm creating this website from scratch using HTML, CSS, Bootstrap, and JavaScript to help me learn to code.  I recently embarked on a 22-week <a href="codingbootcamp.html" class="weeks">Coding Bootcamp</a> journey.</h3>
 
 		<form>
 			<button formaction="about.html" class="learnmore">Learn More About Me</button>
@@ -46,36 +46,6 @@
 
 			<div class="footer">
 				<a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-				<br>Joanna Chang | 2021
+				<br>&copy; 2021 Copyright: Joanna Chang
 			</div>
 	</footer>
-
-
-
-	<!-- <div class="page-container"> -->
-		<!-- <div class="side-bar"> -->
-			<!-- <div class="side-bar-nav header"> -->
-				<!-- <a href="./index.html"> -->
-					<!-- Coding Jojo -->
-				<!-- </a> -->
-			<!-- </div> -->
-			<!-- <div class="side-bar-nav"> -->
-				<!-- <a href="./assets/portfolio/portfolio.html"> -->
-					<!-- Portfolio -->
-				<!-- </a> -->
-			<!-- </div> -->
-			<!-- <div class="side-bar-nav"> -->
-				<!-- <a> -->
-					<!-- About Jojo -->
-				<!-- </a> -->
-			<!-- </div> -->
-		<!-- </div> -->
-		<!-- <div class="main-content"> -->
-			<!-- Jojo's coding dojo -->
-		<!-- </div> -->
-	<!-- </div>	 -->
-</body>
-
-<script src="./main.js"></script>
-
-</html>
