--- a/weeks19to22.html
+++ b/weeks19to22.html
@@ -20,7 +20,7 @@
     <div class="topnav">
 		<a class="active" href="index.html">Home</a>
 		<div class="link-container">
-			<a href="30weeks.html">30 Weeks of Coding</a>
+			<a href="codingbootcamp.html">30 Weeks of Coding</a>
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
 			<a href="tech.html">Tech</a>
@@ -31,9 +31,9 @@
     <div class="page-container">
         <div class="col-12 col-sm-12">
             <div class="contactme">
-                <h2>30 Weeks of Coding</h2> 
-                <h4>I am embarking on a 30-week long coding journey with NuCamp, an engineering bootcamp.</h4>
-                <h4>I am documenting my progress, highlighting the knowledge and skills I have acquired, and showcasing the projects I have created.</h4>
+                <h2>Coding Bootcamp</h2> 
+                <h4>I embarked on a 22-week long coding journey with NuCamp, an engineering bootcamp.</h4>
+                <h4>I documented my progress, highlighting the knowledge and skills I have acquired, and showcasing the projects I have created.</h4>
                 <h4>Source: NuCamp</h4>
             <nav>
                 <br>
@@ -134,7 +134,7 @@
 <footer>
     <div class="footer">
         <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-        <br>Joanna Chang | 2020 
+        <br>&copy; 2021 Copyright: Joanna Chang
     </div>
 </footer>
 </body>
