--- a/tech.html
+++ b/tech.html
@@ -35,48 +35,50 @@
         <div class="technologies">
             <h2>Tech Skills</h2>
         </div>
-    <div class="col-4 col-md-4 large-text">
-        <div class="techstack">
-            <i class="devicon-bootstrap-plain"><h4>Bootstrap</h4></i>
-            <i class="devicon-css3-plain"><h4>CSS, SCSS</h4></i>
-            <i class="devicon-express-original"><h4>Express.js</h4></i>
+        <div class="col-container">
+            <div class="tech-col large-text">
+                <div class="techstack">
+                    <i class="devicon-bootstrap-plain"><h4>Bootstrap</h4></i>
+                    <i class="devicon-css3-plain"><h4>CSS, SCSS</h4></i>
+                    <i class="devicon-express-original"><h4>Express.js</h4></i>
+                </div>
+            </div>
+            <div class="tech-col large-text">
+                <div class="techstack">
+                    <i class="devicon-html5-plain"><h4>HTML5</h4></i>
+                    <i class="devicon-git-plain"><h4>Git</h4></i>
+                    <i class="devicon-github-plain"><h4>Github</h4></i>
+                </div>
+            </div>
+            <div class="tech-col large-text">
+                <div class="techstack">
+                    <i class="devicon-gitlab-plain"><h4>Gitlab</h4></i>
+                    <i class="devicon-javascript-plain"><h4>JavaScript (ES6, ES7, ES8)</h4></i>
+                    <i class="devicon-mongodb-plain"><h4>MongoDB</h4></i>
+                </div>
+            </div>
+            <div class="tech-col large-text">
+                <div class="techstack">
+                    <i class="devicon-nodejs-plain"><h4>Node.js</h4></i>
+                    <i class="devicon-npm-original-wordmark"><h4>NPM</h4></i>
+                    <i class="devicon-python-plain"><h4>Python</h4></i>
+                </div>
+            </div>
+            <div class="tech-col large-text">
+                <div class="techstack">
+                    <i class="devicon-react-original"><h4>React.js</h4></i>
+                    <i class="devicon-mysql-plain"><h4>MySQL</h4></i>
+                    <i class="devicon-visualstudio-plain"><h4>Visual Studio</h4></i>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="col-4 col-md-4 large-text">
-        <div class="techstack">
-            <i class="devicon-html5-plain"><h4>HTML5</h4></i>
-            <i class="devicon-git-plain"><h4>Git</h4></i>
-            <i class="devicon-github-plain"><h4>Github</h4></i>
-        </div>
-    </div>
-    <div class="col-4 col-md-4 large-text">
-        <div class="techstack">
-            <i class="devicon-gitlab-plain"><h4>Gitlab</h4></i>
-            <i class="devicon-javascript-plain"><h4>JavaScript (ES6, ES7, ES8)</h4></i>
-            <i class="devicon-mongodb-plain"><h4>MongoDB</h4></i>
-        </div>
-    </div>
-    <div class="col-4 col-md-4 large-text">
-        <div class="techstack">
-            <i class="devicon-nodejs-plain"><h4>Node.js</h4></i>
-            <i class="devicon-npm-original-wordmark"><h4>NPM</h4></i>
-            <i class="devicon-npm-python-plain"><h4>Python</h4></i>
-        </div>
-    </div>
-    <div class="col-4 col-md-4 large-text">
-        <div class="techstack">
-            <i class="devicon-react-original"><h4>React.js</h4></i>
-            <i class="devicon-mysql-plain"><h4>SQL (MySQL, PostgreSQL, Microsoft SQL Server)</h4></i>
-            <i class="devicon-visualstudio-plain"><h4>Visual Studio</h4></i>
-        </div>
-    </div>
     </div>
 </div>
 
     <footer>
         <div class="footer">
             <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-            <br>&copy; 2021 Copyright: Joanna Chang
+            <br><small>&copy; 2020-2021 Copyright: Joanna Chang. All Rights Reserved</small>
         </div>
     </footer>
 </body>
