--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <footer>
         <div class="footer">
             <a role="button" class="btn btn-link" href="mailto:joannahanchang@gmail.com"><i class="fa fa-envelope-o"></i> joannahanchang@gmail.com</a>
-            <br>&copy; 2021 Copyright: Joanna Chang
+            <br><small>&copy; 2020-2021 Copyright: Joanna Chang. All Rights Reserved</small>
         </div>
     </footer>
 </body>
